Implementation of CRUD endpoints for catalog service
